cambio de nombre a datos

--- a/templates/familia_list.html
+++ b/templates/familia_list.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <b>Lista de familiares</b>
-    {% for familiares in datos_familia %}
+    <b ><h3> Lista de familiares:</h3></b>
+    {% for d in Datos%}
 
-    <p>{{datos_familia.nombre}}</p>
+    <p>{{ d.nombre }}</p>
 
     {% endfor %}
     
